--- a/front-end-side/src/assests/styles/mainHeader/mainHeader.css
+++ b/front-end-side/src/assests/styles/mainHeader/mainHeader.css
@@ -1,5 +1,10 @@
 .main-header button {
-  background-color: rgb(96 121 143);
+  transition: 0.5s;
+  border: 0.5px solid gainsboro;
+}
+.main-header button:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 20, 0.1), 0 1px 2px rgba(0, 0, 20, 0.1);
+
 }
 
 .user-icon {
@@ -25,6 +30,7 @@
 .header-user {
   position: relative;
   transition: all 0.5s;
+  color: rgb(108 114 147);
 }
 
 .user-name {
@@ -32,7 +38,6 @@
   font-optical-sizing: auto;
   font-weight: 800;
   font-style: normal;
-  color: white;
   letter-spacing: 0.1svb;
   transition: all 0.5s;
 
@@ -41,8 +46,7 @@
 .sub-menu {
   position: absolute;
   top: 50px;
-  background-color: rgb(42 43 47);
-  color: rgb(108 114 147);
+  background-color: white;
   width: 100%;
   border-radius: 10px;
   visibility: hidden;
@@ -60,5 +64,5 @@
   transform: scaleY(1);
 }
 .header-user:hover .user-name {
-  color: red !important;
+  color: rgb(157 33 59) !important;
 }
