--- a/front-end-side/src/index.css
+++ b/front-end-side/src/index.css
@@ -1,3 +1,97 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* CSS Button Custom */
+.ButtonCustom {
+  width: 100px;
+  height: 35px;
+  font-size: 14px;
+  margin-bottom: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4px;
+}
+
+.SearchBtn,
+.DetailBtn {
+  border: 1px solid #1890ff;
+  color: #1890ff;
+}
+
+.EditBtn {
+  border: 1px solid #fead4d;
+  color: #fead4d;
+}
+.ChartViewBtn {
+  border: 1px solid #1daa2b;
+  color: #1daa2b;
+}
+
+.DeleteBtn {
+  border: 1px solid #ff0000;
+  color: #ff0000;
+}
+
+.WarningBtn {
+  border: 1px solid #f6b91c;
+  color: #f6b91c;
+}
+.AddBtn {
+  border: 1px solid #1daa2b;
+  color: #1daa2b;
+}
+
+.SearchBtn:hover,
+.DetailBtn:hover {
+  background-color: #1890ff !important;
+  color: white !important;
+  border: 1px solid #1890ff !important;
+}
+
+.EditBtn:hover {
+  background-color: #fead4d !important;
+  color: white !important;
+  border: 1px solid #fead4d !important;
+}
+
+.DeleteBtn:hover {
+  background-color: #ff0000 !important;
+  color: white !important;
+  border: 1px solid #ff0000 !important;
+}
+.ChartViewBtn:hover {
+  background-color: #1daa2b !important;
+  color: white !important;
+  border: 1px solid #1daa2b !important;
+}
+
+.WarningBtn:hover {
+  border: 1px solid #f6b91c !important;
+  color: white !important;
+  background-color: #f6b91c !important;
+}
+
+.AddBtn:hover {
+  border: 1px solid #1daa2b !important;
+  color: white !important;
+  background-color: #1daa2b !important;
+}
+
+.ant-breadcrumb li:hover {
+  cursor: pointer;
+}
+
+.red_text {
+  color: red;
+}
+.green_text {
+  color: #05d627;
+}
+.ant-modal-title {
+  font-size: 20px !important;
+}
+
