--- a/front-end-side/src/layout/mainLayout.css
+++ b/front-end-side/src/layout/mainLayout.css
@@ -1,6 +1,6 @@
 .drawer-header {
-  height: 80px;
-  width: 80%;
+  height: 50px;
+  width: 100px;
   background-image: url('./../assests/img/favicon_hpt.png');
   background-size: contain;
   background-repeat: no-repeat;
