--- a/front-end-side/src/modules/FaceDetection/AuthorizationList/authorizationList.css
+++ b/front-end-side/src/modules/FaceDetection/AuthorizationList/authorizationList.css
@@ -1,12 +1,17 @@
 .card {
-  max-width: 400px;
+  max-width: 350px;
   max-height: fit-content;
   box-shadow: 0 2px 4px rgba(0, 0, 20, 0.08), 0 1px 2px rgba(0, 0, 20, 0.08);
-  background-color: rgb(42 43 47);
+  border: 0.5px solid gainsboro;
+  background-color: white;
   color: rgb(108 114 147);
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
+  padding-top: 20px;
+}
+.card-body {
+  padding: 20px 5px!important;
 }
 .face-img .frame-img {
   max-width: 175px;
