--- a/front-end-side/src/modules/FaceDetection/Chart/BarChart/ageChart.css
+++ b/front-end-side/src/modules/FaceDetection/Chart/BarChart/ageChart.css
@@ -1,10 +1,10 @@
 .age-chart {
-  background-color: rgb(42 43 47);
-  padding: 0px 20px;
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0,0,20,.08),0 1px 2px rgba(0,0,20,.08);  padding: 0px 20px;
   border-radius: 10px;
 }
 .age-chart-title {
-  color: white;
+  color: rgb(108 114 147);
   padding: 20px 0;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
