--- a/front-end-side/src/modules/FaceDetection/Chart/DoughnutChart/attendanceChart.css
+++ b/front-end-side/src/modules/FaceDetection/Chart/DoughnutChart/attendanceChart.css
@@ -1,10 +1,11 @@
 .attendance-chart {
-  background-color: rgb(42 43 47);
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0,0,20,.08),0 1px 2px rgba(0,0,20,.08);
   padding: 0px 20px;
   border-radius: 10px;
 }
 .attendance-chart-title {
-  color: white;
+  color: rgb(108 114 147);
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
