--- a/front-end-side/src/modules/FaceDetection/AuthorizationList/authorizationList.css
+++ b/front-end-side/src/modules/FaceDetection/AuthorizationList/authorizationList.css
@@ -9,6 +9,11 @@
   font-weight: 400;
   font-style: normal;
   padding-top: 20px;
+  transition: all 0.5s;
+}
+.card:hover {
+  box-shadow: 20px 20px 10px rgba(10, 0, 20, 0.08), 0 1px 2px rgba(10, 0, 20, 0.08) !important;
+
 }
 .card-body {
   padding: 20px 5px!important;
